--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,21 @@
+<style>
+body {
+  background-color: black;
+  color: white;
+}
 
+h1 {
+  font-size: 20px;
+}
+
+p {
+  font-size: 12px;
+  color: green;
+}
+div.dotted {
+  border-style: dotted;
+  border-width: 5px;
+  height: 100px;
+  width: 100px;
+}
+</style>
