--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,10 @@ div.dotted {
   height: 100px;
   width: 100px;
 }
+
+ul {
+  list-style-type: square;
+}
+ol {
+  list-style-type: upper-roman;
+}
