--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,16 @@ h1 {
 }
 
 p {
+  background-color: white;
   font-size: 12px;
   color: green;
+}
+#rcorners1 {
+  bordeer radius: 25px;
+  background: white;
+  padding: 20px;
+  width: 200px;
+  height: 150px;
 }
 div.dotted {
   border-style: dotted;
