--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,10 @@ p {
   color: green;
 }
 #rcorners1 {
-  bordeer radius: 25px;
+  border radius: 25px;
   background: white;
   padding: 20px;
   width: 200px;
-  height: 150px;
 }
 div.dotted {
   border-style: dotted;
