--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ p {
   color: green;
 }
 #rcorners1 {
-  border radius: 25px;
+  border-radius: 25px;
   background: white;
   padding: 20px;
   width: 200px;
